--- a/app/components/Element.module.css
+++ b/app/components/Element.module.css
@@ -1,7 +1,9 @@
 .container {
   position: relative;
+  transition: .5s;
 }
 
 .container:hover {
   box-shadow: 0px 0px 10px 2px gold;
+  transition: .5s;
 }
